--- a/springBootDemo31C/src/main/resources/application.properties
+++ b/springBootDemo31C/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+mongodb.primary.uri=mongodb://localhost:27017
+mongodb.primary.database=primary
+mongodb.secondary.uri=mongodb://localhost:27017
+mongodb.secondary.database=secondary
 
+spring.data.mongodb.primary.uri=mongodb://localhost:27017/primary
+spring.data.mongodb.secondary.uri=mongodb://localhost:27017/primary
