--- a/springBootDemo32/src/main/resources/application.properties
+++ b/springBootDemo32/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+#cluster-name要和http://localhost:9200中显示的cluster_name值一致
+spring.data.elasticsearch.cluster-name=docker-cluster
+spring.data.elasticsearch.cluster-nodes=localhost:9300
